--- a/多合一传感器设计.md
+++ b/多合一传感器设计.md
@@ -5,10 +5,72 @@
 # 目前明确可以实现的
 
 1. 超声波传感器的设计，目前有完整的电路原理图资料，可根据其进行修改
-1. 激光雷达的设计已找到外网开源项目资料
+2. 激光雷达的设计已找到外网开源项目资料
+
 # 尚存在的问题
 
 1. 几个传感器的位置耦合有待论证，激光雷达和红外测温之间可能存在干扰
 1. SLAM建模问题
 1. 机械结构设计，初步采用转盘式
 1. 红外测温传感器较为陌生
+
+# 超声波模块设计
+## 介绍
+这一部分可以使用市场上的成熟方案,HC-SR04 的设计.
+淘宝上这个模块的价格是 2元左右.成本很低.
+
+## 原理
+
+![v2-39801fb7c9f0b909448310ef18ba0494_1440w](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/v2-39801fb7c9f0b909448310ef18ba0494_1440w.jpg)
+
+## 功能
+超声波测距是为了补足在特殊情况下激光雷达无法正常工作的不足.比如激光雷达的范围最小大约在 30cm,30cm 以内的测距需要使用超声波测距.当机器人身陷火场的时候,温度过高会影响激光雷达,这时候也要使用超声波测距.
+## 电气参数
+|电气参数|HC-SR04 超声波模块|
+|:-----:|:-----:|
+|工作电压|DC5V|
+|工作电流|15mA|
+|工作频率|40Hz|
+|最远射程|4m|
+|最近射程|2cm|
+|测量角度|15 度|
+|触发信号|10uS 的 TTL 脉冲|
+|返回信号|TTL 电平信号,与射程成正比|
+## 原理图
+
+![image-20200706125728928](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/image-20200706125728928.png)
+
+# 激光雷达设计
+
+## 介绍
+
+激光雷达是本模块的核心器件,激光雷达主要分为三部分,测距探头,数据处理,机械运动.
+
+## 原理
+
+![7BAC0DD7-FA57-4DA4-8140-8CAD104E4D13](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/7BAC0DD7-FA57-4DA4-8140-8CAD104E4D13.png)
+
+通过一个激光二极管发射一道镭射光线,反射之后经过透镜聚集,读取传感器的数据,可以计算出距离.
+
+![image-20200706133444108](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/image-20200706133444108.png)
+
+将探头安装在一个旋转的底座上,通过高速转动,记录下每个角度对应的距离,就可以绘制出二维平面的空间结构.
+
+## 探头部分设计
+
+影响探头探测能力的因素很多,首先,为有效捕捉到激光器发出的脉冲信号，感光元件需要安放在距离激光器合适的位置。并且需要根据测量需求，为激光器和感光元件安装合适焦距的镜头。还有一个对传感器性能影响至关重要的是激光信号发射器的脉宽，它决定了激光雷达能够测量的最大距离。假设光速为 c = 300,000,000 m/s，当光脉冲宽度为 50 ns 时，其最远测量距离为 7.5 m。![](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/v2-4497610cecb220f963cdf83ff1b7d1c9_1440w-20200706134336104.jpg)
+
+由于感光元件产生的电信号需要经过放大处理，相应放大元件的增益、带宽、噪声、电源抑制比、共模抑制比、线性度、输出阻抗等关键指标，在制作过程中也是需要考虑的因素。最后就是运算单元的分辨率，其决定着传感器能否准确计算出激光脉冲往返的时间差。
+
+## 数据处理部分设计
+
+由于光速极快,响应时间可能是 ns 级的,普通单片机是无法处理这种信号的,所以需要加入专门的芯片,如 TDC-GP21.时间分辨率为 90ps.mcu 可以通过spi 与其进行通信.因为有专门的芯片处理激光返回时间,mcu 的负担就小很多,f1系列的芯片就足够完成任务.
+
+## 机械运动部分设计
+
+这里需要使用步进电机,因为需要能够精确获得角度.
+
+更加具体的设计可以转到[这里](https://zhuanlan.zhihu.com/p/115061732)
+
+# 红外测温设计
+# 模块直接如何配合
