--- a/多合一传感器设计.md
+++ b/多合一传感器设计.md
@@ -10,9 +10,9 @@
 # 尚存在的问题
 
 1. 几个传感器的位置耦合有待论证，激光雷达和红外测温之间可能存在干扰
-1. SLAM建模问题
-1. 机械结构设计，初步采用转盘式
-1. 红外测温传感器较为陌生
+2. SLAM建模问题
+3. 机械结构设计，初步采用转盘式
+
 
 # 超声波模块设计
 ## 介绍
@@ -73,4 +73,8 @@
 更加具体的设计可以转到[这里](https://zhuanlan.zhihu.com/p/115061732)
 
 # 红外测温设计
+## 思路
+这一部分可以使用市场上的成熟方案,MLX90614的设计. 淘宝上这个模块的价格是 40元左右.MLX90302在信号调节芯片中使用了先进的低噪音放大器，一枚 17-bit ADC 以及功能强大的 DSP 元件, 从而 实现高精确度温度测量. 计算并储存于 RAM 中的环境温度以及物体温度可实现 0.01 ˚C 的解析度的数据, 并且 它可通过双线标准 SMBus 输出获得 (0.02°C 解析度) 或者通过 10-bit PWM 输出获得
+
 # 模块直接如何配合
+1. 
