--- a/多合一传感器设计.md
+++ b/多合一传感器设计.md
@@ -21,7 +21,7 @@
 
 ## 原理
 
-![v2-39801fb7c9f0b909448310ef18ba0494_1440w](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/v2-39801fb7c9f0b909448310ef18ba0494_1440w.jpg)
+![68747470733a2f2f7069636265642d313235363435363736302e636f732e61702d7368616e676861692e6d7971636c6f75642e636f6d2f76322d33393830316662376339663062393039343438333130656631386261303439345f31343430772e6a7067](http://pic.baldstudio.cn/68747470733a2f2f7069636265642d313235363435363736302e636f732e61702d7368616e676861692e6d7971636c6f75642e636f6d2f76322d33393830316662376339663062393039343438333130656631386261303439345f31343430772e6a7067.jpg)
 
 ## 功能
 超声波测距是为了补足在特殊情况下激光雷达无法正常工作的不足.比如激光雷达的范围最小大约在 30cm,30cm 以内的测距需要使用超声波测距.当机器人身陷火场的时候,温度过高会影响激光雷达,这时候也要使用超声波测距.
@@ -38,7 +38,7 @@
 |返回信号|TTL 电平信号,与射程成正比|
 ## 原理图
 
-![image-20200706125728928](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/image-20200706125728928.png)
+![image-20200707221346904](http://pic.baldstudio.cn/image-20200707221346904.png)
 
 # 激光雷达设计
 
@@ -48,17 +48,17 @@
 
 ## 原理
 
-![7BAC0DD7-FA57-4DA4-8140-8CAD104E4D13](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/7BAC0DD7-FA57-4DA4-8140-8CAD104E4D13.png)
+![7BAC0DD7-FA57-4DA4-8140-8CAD104E4D13](http://pic.baldstudio.cn/68747470733a2f2f7069636265642d313235363435363736302e636f732e61702d7368616e676861692e6d7971636c6f75642e636f6d2f37424143304444372d464135372d344441342d383134302d3843414431303445344431332e706e67.png)
 
 通过一个激光二极管发射一道镭射光线,反射之后经过透镜聚集,读取传感器的数据,可以计算出距离.
-
-![image-20200706133444108](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/image-20200706133444108.png)
 
 将探头安装在一个旋转的底座上,通过高速转动,记录下每个角度对应的距离,就可以绘制出二维平面的空间结构.
 
 ## 探头部分设计
 
-影响探头探测能力的因素很多,首先,为有效捕捉到激光器发出的脉冲信号，感光元件需要安放在距离激光器合适的位置。并且需要根据测量需求，为激光器和感光元件安装合适焦距的镜头。还有一个对传感器性能影响至关重要的是激光信号发射器的脉宽，它决定了激光雷达能够测量的最大距离。假设光速为 c = 300,000,000 m/s，当光脉冲宽度为 50 ns 时，其最远测量距离为 7.5 m。![](https://picbed-1256456760.cos.ap-shanghai.myqcloud.com/v2-4497610cecb220f963cdf83ff1b7d1c9_1440w-20200706134336104.jpg)
+影响探头探测能力的因素很多,首先,为有效捕捉到激光器发出的脉冲信号，感光元件需要安放在距离激光器合适的位置。并且需要根据测量需求，为激光器和感光元件安装合适焦距的镜头。还有一个对传感器性能影响至关重要的是激光信号发射器的脉宽，它决定了激光雷达能够测量的最大距离。假设光速为 c = 300,000,000 m/s，当光脉冲宽度为 50 ns 时，其最远测量距离为 7.5 m。
+
+![68747470733a2f2f7069636265642d313235363435363736302e636f732e61702d7368616e676861692e6d7971636c6f75642e636f6d2f76322d34343937363130636563623232306639363363646638336666316237643163395f31343430772d32303230303730363133343333363130342e6a7067](http://pic.baldstudio.cn/68747470733a2f2f7069636265642d313235363435363736302e636f732e61702d7368616e676861692e6d7971636c6f75642e636f6d2f76322d34343937363130636563623232306639363363646638336666316237643163395f31343430772d32303230303730363133343333363130342e6a7067.png)
 
 由于感光元件产生的电信号需要经过放大处理，相应放大元件的增益、带宽、噪声、电源抑制比、共模抑制比、线性度、输出阻抗等关键指标，在制作过程中也是需要考虑的因素。最后就是运算单元的分辨率，其决定着传感器能否准确计算出激光脉冲往返的时间差。
 
@@ -76,5 +76,44 @@
 ## 思路
 这一部分可以使用市场上的成熟方案,MLX90614的设计. 淘宝上这个模块的价格是 40元左右.MLX90302在信号调节芯片中使用了先进的低噪音放大器，一枚 17-bit ADC 以及功能强大的 DSP 元件, 从而 实现高精确度温度测量. 计算并储存于 RAM 中的环境温度以及物体温度可实现 0.01 ˚C 的解析度的数据, 并且 它可通过双线标准 SMBus 输出获得 (0.02°C 解析度) 或者通过 10-bit PWM 输出获得
 
-# 模块直接如何配合
-   
+## 原理
+物体红外辐射能量的大小和波长的分布与其表面温度关系密切。因此,通过对物体自身红外辐射的测量，能准确地确定其表面温度，红外测温就是利用这一原理测量温度的。红外测温器由光学系统、光电探测器、信号放大器和信号处理及输出等部分组成。光学系统汇聚其视场内的目标红外辐射能量,视场的大小由测温仪的光学零件及其位置确定。红外能量聚焦在光电探测器.上并转变为相应的电信号。该信号经过放大器和信号处理电路，并按照仪器内的算法和目标发射率校正后转变为被测目标的温度值。
+
+## 功能
+红外温度传感器可以检测环境中活物的位置，以及温度特别高的火源位置，可以实时检测。MLX90614红外测温模块支持I2C协议和SMBus协议。
+
+## 原理图
+
+![image-20200707222235259](http://pic.baldstudio.cn/image-20200707222235259.png)
+
+
+
+## 产品特征
+
+体积小, 成本低
+ 方便集成
+ 宽温度范围出厂校准:
+ -40…+125 °C 环境温度
+ -70…+380 °C 物体温度.
+ 大温度范围内据有0.5°C 的高精确度.
+ ( 在0..+50°C 环境与物体温度之间)
+ 超高精确校准（医疗级别）
+ 0.02°C 测温解析度
+ 单感应或双感应区域
+ 支持 SMBus 输入输出标准
+ 兼容脉宽调制（PWM） 输出方式
+ 3V 与 5V 工作电压可供选择
+ 外加简易电路即可用于8 到16V 工作电压
+ 节能关断工作模式
+ 多种封装选择适用不同应用领域
+ 车用级别标准
+
+## 电气参数
+
+![image-20200707222336186](http://pic.baldstudio.cn/image-20200707222336186.png)
+
+##  MLX90614 温度读数精确度
+
+所有精确度特征都是在保证器件金属封装在热均衡的情况下. 并且, 所有精确度都只适用于感应器视野范围内只存在被测物体. 
+
+![image-20200707222402535](http://pic.baldstudio.cn/image-20200707222402535.png)
